changed the HTML file to a text file which includes phishing & normal emails with email titles
changed the HTML file to a text file which includes phishing & normal emails with email titles

--- a/phishingEmailTemplates.html
+++ b/phishingEmailTemplates.html
@@ -1,20 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Phishing Email Templates</title>
-</head>
-<body>
-    <h1>Phishing Email Templates</h1>
-    <h2>Normal Emails</h2>
-    <h2>Phishing Emails</h2>
-    <ol>
-        <li>Fake Bank Alert Email</li>
-        <li>Fake Amazon Order Confirmation</li>
-        <li>Fake Social Media Login Request</li>
-        <li>Fake Charity Donation Request</li>
-        <li>Fake IT Support Email</li>
-    </ol>
-</body>
-</html>
+Phishing Email Templates
+
+Normal Emails
+
+Phishing Emails
+
+Fake Bank Alert Email
+Fake Amazon Order Confirmation
+Fake Social Media Login Request
+Fake Charity Donation Request
+Fake IT Support Email
