wrote the text for phishing email 1
wrote the text for phishing email 1

--- a/phishingEmailTemplates.html
+++ b/phishingEmailTemplates.html
@@ -4,8 +4,31 @@ Normal Emails
 
 Phishing Emails
 
-Fake Bank Alert Email
-Fake Amazon Order Confirmation
+1. Fake Bank Alert Email
+
+Subject: Unusual Login Attempt Detected!
+
+Dear [Your Name],
+
+We detected an unusual login attempt on your SecureBank account from a new device.
+
+Location: [City, Country]
+Time: [Date and Time]
+
+For your security, we have temporarily restricted your account access. To regain access, please verify your account details within 24 hours.
+
+Click below to verify:
+Verify My Account
+
+If you do not verify your account, it will be permanently locked.
+
+Thank you for choosing SecureBank.
+
+Sincerely,
+SecureBank Support Team
+
+2. Fake Amazon Order Confirmation
+
 Fake Social Media Login Request
 Fake Charity Donation Request
 Fake IT Support Email
