3 phishing emails have been created
3 phishing emails have been created

--- a/phishingEmailTemplates.html
+++ b/phishingEmailTemplates.html
@@ -7,6 +7,7 @@ Phishing Emails
 1. Fake Bank Alert Email
 
 Subject: Unusual Login Attempt Detected!
+From: support@securebank.com
 
 Dear [Your Name],
 
@@ -29,6 +30,47 @@ SecureBank Support Team
 
 2. Fake Amazon Order Confirmation
 
-Fake Social Media Login Request
-Fake Charity Donation Request
+Subject: Your Order #12345 Has Been Placed
+From: orders@amazon-support.com
+
+Hello,
+
+Thank you for your purchase of Apple iPhone 14 Pro ($1,299.99).
+
+Order Summary:
+
+Product: Apple iPhone 14 Pro
+Total: $1,299.99
+Delivery Address: [Your Address]
+If you did not place this order, please cancel it immediately to avoid being charged.
+
+Click here to cancel your order:
+Cancel Order
+
+Thank you for shopping with Amazon.
+
+Amazon Support
+
+3. Fake Social Media Login Request
+
+Subject: Suspicious Login Attempt on Your Instagram Account
+From: no-reply@instagram-security.com
+
+Hi [Username],
+
+We noticed an unauthorized login attempt on your Instagram account.
+
+Location: Unknown
+Device: iPhone 14 Pro
+
+If this was you, no further action is required. If this wasn’t you, please secure your account by resetting your password now:
+
+Secure My Account
+
+Failure to act within 48 hours will result in account suspension for your protection.
+
+Thanks,
+Instagram Security Team
+
+4. Fake Charity Donation Request
 Fake IT Support Email
