--- a/phishingEmailTemplates.html
+++ b/phishingEmailTemplates.html
@@ -3,6 +3,20 @@ Phishing Email Templates
 Normal Emails
 
 Real LinkedIn Password Reset request
+Subject: Password Change 
+
+Dear LinkedIn User, 
+
+We have received a password reset request from you. Please click on this link to reset your password. The link will expire in 24 hours. 
+
+Reset password now (this is the link.) 
+
+Thank you for using LinkedIn. 
+
+Regards, 
+
+The LinkedIn Team 
+
 Phishing Emails
 
 1. Fake Bank Alert Email
