--- a/phishingEmailTemplates.html
+++ b/phishingEmailTemplates.html
@@ -74,4 +74,42 @@ Thanks,
 Instagram Security Team
 
 4. Fake Charity Donation Request
-Fake IT Support Email
+
+Subject: Urgent: Help Victims of [Disaster] Today
+From: support@globalhelpinghands.org
+
+Dear Supporter,
+
+The recent [Disaster] has left thousands homeless and in need of urgent aid. Global Helping Hands is stepping up to provide food, shelter, and medical supplies.
+
+Your donation can make a difference:
+
+$10 can feed a family for a day.
+$50 can provide shelter for a week.
+$100 can save lives through medical care.
+Donate now to join us in this critical effort:
+Donate Here
+
+Thank you for your kindness and generosity.
+
+Sincerely,
+The Global Helping Hands Team
+
+5. Fake IT Support Email
+
+Subject: Your Email Account Will Be Deactivated!
+From: it-support@[YourCompanyName].com
+
+Dear [Your Name],
+
+Our system detected that your email account storage has exceeded its limit. To avoid deactivation, you must increase your storage capacity immediately.
+
+To continue using your email without interruption, please click the link below to upgrade:
+
+Upgrade My Account
+
+Failure to act within 48 hours will result in permanent email deletion.
+
+Regards,
+IT Support Team
+[Your Company Name]
