phishing email template 2

--- a/phishingEmailTemplates.html
+++ b/phishingEmailTemplates.html
@@ -19,6 +19,21 @@ The LinkedIn Team
 
 Phishing Emails
 
+2.Subscription Cancellation
+
+Subject: Your Subscription Has Been Canceled
+Message:
+"We’re sorry to see you go! Your subscription for Amazon Prime has been canceled. If this was a mistake, please reactivate here: 
+
+Reactivate Subscription (This is a link)
+
+If you have not canceled the subscription, ignore this email.
+
+Regards,
+
+The Amazon Team
+
+
 1. Fake Bank Alert Email
 
 Subject: Unusual Login Attempt Detected!
