--- a/phishingEmailTemplates.html
+++ b/phishingEmailTemplates.html
@@ -5,7 +5,7 @@ Normal Emails
 Real LinkedIn Password Reset request
 Subject: Password Change 
 
-Dear LinkedIn User, 
+Dear User, 
 
 We have received a password reset request from you. Please click on this link to reset your password. The link will expire in 24 hours. 
 
@@ -32,6 +32,12 @@ If you have not canceled the subscription, ignore this email.
 Regards,
 
 The Amazon Team
+
+3.Free gift Offer
+
+Subject-You've got a reward!
+
+
 
 
 1. Fake Bank Alert Email
