created files for navigation bar
created files for navigation bar

--- a/phishingEmailTemplates.html
+++ b/phishingEmailTemplates.html
@@ -2,7 +2,8 @@ Phishing Email Templates
 
 Normal Emails
 
-Real LinkedIn Password Reset request
+1. Real LinkedIn Password Reset request
+
 Subject: Password Change 
 
 Dear LinkedIn User, 
