basics of presentation

--- a/website.html
+++ b/website.html
@@ -7,5 +7,9 @@
 </head>
 <body>
     <h1>Sherlock Phish</h1>
+    <h2>An interactive training platform that educates about the risks of phishing attacks</h2>
+    <p>Phishing is a type of online scam that involves sending emails linking to pages that steal your data or your money.<br>
+    Phishing is becoming increasingly common, so people need to be educated about the dangers of this type of scam. </p>
+    <input type="button" value="What is Phishing?" id="What Is Phishing?">
 </body>
 </html>
