--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 <body>
     <h1>Sherlock Phish</h1>
     <img src="C:\Users\Noopur Shrivastava\Downloads\Phishing.jpg" alt="Phishing" width="800" height="400">
+    <h1>Detect. Report. Learn.</h1>
+    <p>Sherlock Phish helps individuals </p>
 </body>
 </html>
