--- a/index.html
+++ b/index.html
@@ -4,11 +4,42 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sherlock Phish</title>
+    <style>
+        body {
+            background-color: AliceBlue;
+            font-family: Arial, Helvetica, sans-serif;
+        }
+
+        header, footer {
+            background-color: DarkSlateGray;
+            color: White;
+        }
+
+        header, section, footer {
+            padding: 10px;
+            text-align: center;
+        }
+
+        section h1 {
+            color: DarkSlateGray;
+        }
+
+        section p {
+            color: Gray;
+        }
+    </style>
 </head>
 <body>
-    <h1>Sherlock Phish</h1>
-    <img src="C:\Users\Noopur Shrivastava\Downloads\Phishing.jpg" alt="Phishing" width="800" height="400">
-    <h1>Detect. Report. Learn.</h1>
-    <p>Sherlock Phish helps individuals </p>
+    <header>
+        <h1>Sherlock Phish</h1>
+    </header>
+    <section>
+        <img src="C:\Users\Noopur Shrivastava\Downloads\Phishing.jpg" alt="Phishing" width="800" height="400">
+        <h1>Detect. Report. Learn.</h1>
+        <p>Sherlock Phish teaches people about phishing through educational content and interactive simulations.</p>
+    </section>
+    <footer>
+        <h1>© 2025 Sherlock Phish. All rights reserved.</h1>
+    </footer>
 </body>
 </html>
