--- a/index.html
+++ b/index.html
@@ -33,10 +33,18 @@
     <header>
         <h1>Sherlock Phish</h1>
     </header>
+    <nav>
+        <ol>
+            <li></li>
+        </ol>
+    </nav>
     <section>
         <img src="C:\Users\Noopur Shrivastava\Downloads\Phishing.jpg" alt="Phishing" width="800" height="400">
         <h1>Detect. Report. Learn.</h1>
         <p>Sherlock Phish teaches people about phishing through educational content and interactive simulations.</p>
+        <h2>What is Sherlock Phish?</h2>
+        <h2>How Does It Work?</h2>
+        <h2>Why Is It Important</h2>
     </section>
     <footer>
         <h1>© 2025 Sherlock Phish. All rights reserved.</h1>
