--- a/index.html
+++ b/index.html
@@ -24,8 +24,16 @@
             color: DarkSlateGray;
         }
 
+        section h2 {
+            color: SlateGray;
+        }
+
         section p {
             color: Gray;
+        }
+
+        .left {
+            text-align: left;
         }
     </style>
 </head>
@@ -42,9 +50,11 @@
         <img src="C:\Users\Noopur Shrivastava\Downloads\Phishing.jpg" alt="Phishing" width="800" height="400">
         <h1>Detect. Report. Learn.</h1>
         <p>Sherlock Phish teaches people about phishing through educational content and interactive simulations.</p>
-        <h2>What is Sherlock Phish?</h2>
-        <h2>How Does It Work?</h2>
-        <h2>Why Is It Important</h2>
+        <div class="left">
+            <h2>What is Sherlock Phish?</h2>
+            <h2>How Does It Work?</h2>
+            <h2>Why Is It Important</h2>
+        </div>
     </section>
     <footer>
         <h1>© 2025 Sherlock Phish. All rights reserved.</h1>
