adding info to index

--- a/index.html
+++ b/index.html
@@ -52,8 +52,12 @@
         <p>Sherlock Phish teaches people about phishing through educational content and interactive simulations.</p>
         <div class="left">
             <h2>What is Sherlock Phish?</h2>
+            <p>Sherlock Phish is a website that educates people about phishing and can also run a phishing test simulator that helps people to identify and deal with phishing in a real life scenario.</p>
             <h2>How Does It Work?</h2>
+            <p> It uses HTML, Python, and CSS to teach people about Phishing in a simple and effective way- Phishing simulations. Here, you can enter your mail and we send you a mail which you can identify as a phish or a legit mail.</p>
+
             <h2>Why Is It Important</h2>
+            <p>Phishing is a very big real-world issue, as lots of people lose data smd money to phish mails every day. This website equips people with the skill to recognise phishes and deal with them apprropriately, which can help people save info and money.</p>
         </div>
     </section>
     <footer>
