--- a/index.html
+++ b/index.html
@@ -43,7 +43,12 @@
     </header>
     <nav>
         <ol>
-            <li></li>
+            <li>What is Phishing?</li>
+            <li>Types of Phishing</li>
+            <li>Report Phishing</li>
+            <li>Phishing Simulation</li>
+            <li>How to Prevent Phishing</li>
+            <li>FAQ and Help</li>
         </ol>
     </nav>
     <section>
