--- a/Website templates/typesofphishing.html
+++ b/Website templates/typesofphishing.html
@@ -18,5 +18,12 @@
    <p>An HTTPS phishing attack is carried out by sending the victim an email with a link to a fake website. The site may then be used to fool the victim into entering their private information.</p>
    <h2>6. Email phishing</h2> 
     <p>In an email phishing scam, the attacker sends an email that looks legitimate, designed to trick the recipient into entering information in reply or on a site that the hacker can use to steal or sell their data.</p>
+    <h2>Whaling</h2>
+        <p>Whaling is when people with lots of money or sensitive information are specifically targeted, such as CEO's or CFO's. These mails are usually personally tailored to people with personal elements to make it highly convincing.</p>
+
+    <h2>Spear Phishing</h2>
+    <p>Spear Phishing specifically targets individuals or organizations, though unlike spear fishing, the person does not have to be high-end. This also has personal, targeted mail crafting.</p>
+    <h2>Smishing</h2>
+    <p>This type of phishing is done through text messages instead of emails.</p>
     <p>Learn about more types of phishing here-<a href="https://www.fortinet.com/resources/cyberglossary/types-of-phishing-attacks">Types Of Phishing</a></p>
     <p>Go back to our page about phishing-<a href="what-is-phishing.html">What Is Phishing?</a></p>
