added css for all pages and navbar for home
added css for all pages and navbar for home

--- a/whatIsPhishing.html
+++ b/whatIsPhishing.html
@@ -4,6 +4,56 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sherlock Phish</title>
+    <style>
+                body {
+            background-color: AliceBlue;
+            font-family: Arial, Helvetica, sans-serif;
+            color: #333;
+            margin: 0;
+            padding: 20px;
+        }
+
+        h2 {
+            color: DarkSlateGray;
+            font-size: 24px;
+            margin-bottom: 10px;
+            text-transform: capitalize;
+        }
+
+        p {
+            color: DimGray;
+            font-size: 18px;
+            margin-bottom: 15px;
+        }
+
+        a {
+            color: DodgerBlue;
+            text-decoration: none;
+        }
+
+        a:hover {
+            color: Tomato;
+            text-decoration: underline;
+        }
+
+        p a {
+            font-weight: bold;
+        }
+
+        section {
+            padding: 20px;
+            background-color: Azure;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            margin-bottom: 20px;
+        }
+
+        h1 {
+            text-align: center;
+            color: #2F4F4F;
+            font-size: 36px;
+            margin-bottom: 30px;
+        }
+    </style>
 </head>
 <body>
     <h1> What Is Phishing?</h1>
