--- a/index.html
+++ b/index.html
@@ -35,7 +35,36 @@
         .left {
             text-align: left;
         }
-    </style>
+
+        /* Navigation bar */
+        nav {
+            background-color: SlateGray;
+            padding: 10px;
+        }
+
+        nav ol {
+            list-style-type: none;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            justify-content: center;
+        }
+
+        nav ol li {
+            margin: 7.5px;
+        }
+
+        nav ol li a {
+            color: White;
+            text-decoration: none;
+            font-weight: bold;
+        }
+
+        nav ol li a:hover {
+            color: LightSkyBlue;
+            text-decoration: underline;
+        }
+</style>
 </head>
 <body>
     <header>
@@ -43,11 +72,11 @@
     </header>
     <nav>
         <ol>
-            <li>What is Phishing?</li>
-            <li>Types of Phishing</li>
-            <li>Phishing Simulation</li>
-            <li>How to Prevent Phishing</li>
-            <li>FAQ and Help</li>
+            <li><a href="C:\Users\Noopur Shrivastava\Documents\GitHub\Codefest-2025\whatIsPhishing.html">What is Phishing?</a></li>
+            <li><a href="C:\Users\Noopur Shrivastava\Documents\GitHub\Codefest-2025\types OfPhishing.html">Types of Phishing</a></li>
+            <li><a href="C:\Users\Noopur Shrivastava\Documents\GitHub\Codefest-2025\Login page.py">Phishing Simulation</a></li>
+            <li><a href="C:\Users\Noopur Shrivastava\Documents\GitHub\Codefest-2025\whatToDoWhenYouSeePhishing.html">What To Do If You See Phishing</a></li>
+            <li><a href="C:\Users\Noopur Shrivastava\Documents\GitHub\Codefest-2025\FAQ.html">FAQ and Help</a></li>
         </ol>
     </nav>
     <section>
