types of phishing

--- a/Website templates/typesofphishing.html
+++ b/Website templates/typesofphishing.html
@@ -25,5 +25,8 @@
     <p>Spear Phishing specifically targets individuals or organizations, though unlike spear fishing, the person does not have to be high-end. This also has personal, targeted mail crafting.</p>
     <h2>Smishing</h2>
     <p>This type of phishing is done through text messages instead of emails.</p>
+    <h2>Vishing</h2>
+    <p>Here, people fake voices to phish over the phone, on calls.</p>
+    <h2></h2>
     <p>Learn about more types of phishing here-<a href="https://www.fortinet.com/resources/cyberglossary/types-of-phishing-attacks">Types Of Phishing</a></p>
     <p>Go back to our page about phishing-<a href="what-is-phishing.html">What Is Phishing?</a></p>
