--- a/Website templates/index.html
+++ b/Website templates/index.html
@@ -74,7 +74,7 @@
         <ol>
             <li><a href="C:\Users\Noopur Shrivastava\Documents\GitHub\Codefest-2025\whatIsPhishing.html">What is Phishing?</a></li>
             <li><a href="C:\Users\Noopur Shrivastava\Documents\GitHub\Codefest-2025\types OfPhishing.html">Types of Phishing</a></li>
-            <li><a href="C:\Users\Noopur Shrivastava\Documents\GitHub\Codefest-2025\Login page.py">Phishing Simulation</a></li>
+            <li><a href="C:\Users\Noopur Shrivastava\Documents\GitHub\Codefest-2025\login.html">Phishing Simulation</a></li>
             <li><a href="C:\Users\Noopur Shrivastava\Documents\GitHub\Codefest-2025\whatToDoWhenYouSeePhishing.html">What To Do If You See Phishing</a></li>
             <li><a href="C:\Users\Noopur Shrivastava\Documents\GitHub\Codefest-2025\FAQ.html">FAQ and Help</a></li>
         </ol>
