faq errors updated
faq errors updated

--- a/FAQ.html
+++ b/FAQ.html
@@ -13,14 +13,15 @@
     <p>No. Phishing can be done via phone calls, SMS, or Messages. Phishing isn't just limited to email.</p>
     <h2>Why is understanding the risk of Phishing important?</h2>
     <p>Phishing attacks are a constant threat to campus and are becoming increasingly sophisticated. Successful Phishing attacks can:<br>
-
-        <li>Cause financial loss for victims<br>
-        <li>Put their personal information at risk<br>
-        <li>Put university data and systems at risk</p>
-            <h2>How do I report a Phishing or suspicious email?</h2>
-            <p>Reporting suspicious emails can dramatically reduce the duration and impact of an active phishing attack<br>
-                
-                <li>Open the message<br>
-                <li>To the right of 'Reply' arrow, select 'More' (typically denoted with three vertical dots)<br>
-                <li>Then 'Report phishing'<br>
-                <li>Reporting through Google allows the email to be blocked from further attacks against and may prevent others from falling victim to the attack.</p>
+    <ul>
+        <li>Cause financial loss for victims</li>
+        <li>Put their personal information at risk</li>
+        <li>Put university data and systems at risk</li>
+    </ul>
+    <h2>How do I report a Phishing or suspicious email?</h2>
+    <p>Reporting suspicious emails can dramatically reduce the duration and impact of an active phishing attack<br>
+    <ul>
+        <li>Open the message</li>
+        <li>To the right of 'Reply' arrow, select 'More' (typically denoted with three vertical dots)</li>
+        <li>Then 'Report phishing'</li>
+        <li>Reporting through Google allows the email to be blocked from further attacks against and may prevent others from falling victim to the attack.</li>
