hope this works

--- a/Website templates/index.html
+++ b/Website templates/index.html
@@ -74,7 +74,7 @@
         <ol>
             <li><a href="whatIsPhishing.html">What is Phishing?</a></li>
             <li><a href="types OfPhishing.html">Types of Phishing</a></li>
-            <li><a href="login.html">Phishing Simulation</a></li>
+            <li><a href="file:///C:/Users/Noopur%20Shrivastava/Documents/GitHub/Codefest-2025/Website%20templates/login.html">Phishing Simulation</a></li>
             <li><a href="whatToDoWhenYouSeePhishing.html">What To Do If You See Phishing</a></li>
             <li><a href="FAQ.html">FAQ and Help</a></li>
         </ol>
