--- a/Website templates/index.html
+++ b/Website templates/index.html
@@ -72,11 +72,11 @@
     </header>
     <nav>
         <ol>
-            <li><a href="whatIsPhishing.html">What is Phishing?</a></li>
-            <li><a href="types OfPhishing.html">Types of Phishing</a></li>
-            <li><a href="file:///C:/Users/Noopur%20Shrivastava/Documents/GitHub/Codefest-2025/Website%20templates/login.html">Phishing Simulation</a></li>
-            <li><a href="whatToDoWhenYouSeePhishing.html">What To Do If You See Phishing</a></li>
-            <li><a href="FAQ.html">FAQ and Help</a></li>
+            <li><a href="C:\Users\Noopur Shrivastava\Documents\GitHub\Codefest-2025\whatIsPhishing.html">What is Phishing?</a></li>
+            <li><a href="C:\Users\Noopur Shrivastava\Documents\GitHub\Codefest-2025\types OfPhishing.html">Types of Phishing</a></li>
+            <li><a href="C:\Users\Noopur Shrivastava\Documents\GitHub\Codefest-2025\login.html">Phishing Simulation</a></li>
+            <li><a href="C:\Users\Noopur Shrivastava\Documents\GitHub\Codefest-2025\whatToDoWhenYouSeePhishing.html">What To Do If You See Phishing</a></li>
+            <li><a href="C:\Users\Noopur Shrivastava\Documents\GitHub\Codefest-2025\FAQ.html">FAQ and Help</a></li>
         </ol>
     </nav>
     <section>
