--- a/login.html
+++ b/login.html
@@ -92,6 +92,7 @@
         <label for="email">Enter your email address:</label><br>
         <input type="text" id="email" name="email" placeholder="example@gmail.com" required><br>
         <button type="submit">Submit</button>
+        <p>Please check your Gmail inbox to start the simulation.</p>
     </form>
     <script>
         // JavaScript code to prevent user from submitting form if their input does NOT include "@gmail.com"
