--- a/Website templates/whattodoifyouseephishing.html
+++ b/Website templates/whattodoifyouseephishing.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>What to do if you recieve a Phish?</h1>
-    <p><li>Don't reply to the email.<li> Don't click on any links in the email.<li>However, opening the email is still safe as email apps will make sure that any code on opening will not run.<li>Report the mail to the company it is allegedly from.<li>Mark the sender as Junk or Spam.<li>delete the email.
+    <p><li>Don't reply to the email.<li> Don't click on any links in the email.<li>However, opening the email is still safe as email apps will make sure that any code on opening will not run.<li>Report the mail to the company it is allegedly from.<li>Mark the sender as Junk or Spam.<li>Delete the email.
 
     </p>
         <p></p>
