--- a/login.html
+++ b/login.html
@@ -88,7 +88,7 @@
 </head>
 <body>
     <h1>Login</h1>
-    <form method="post" action="submit_email.py">
+    <form method="post" action="http://localhost:8000/submit_email">
         <label for="email">Enter your email address:</label><br>
         <input type="text" id="email" name="email" placeholder="example@gmail.com" required><br>
         <button type="submit">Submit</button>
