--- a/login.html
+++ b/login.html
@@ -6,7 +6,8 @@
     <title>Login</title>
     <style>
                 body {
-            background-color: AliceBlue;
+                    text-align:center;
+                    background-color: AliceBlue;
             font-family: Arial, Helvetica, sans-serif;
             color: #333;
             margin: 0;
@@ -88,7 +89,7 @@
 </head>
 <body>
     <h1>Login</h1>
-    <form method="post" action="http://localhost:8000/submit_email">
+    <form method="post" action="submit_email.py">
         <label for="email">Enter your email address:</label><br>
         <input 
             type="email" 
