--- a/login.html
+++ b/login.html
@@ -15,6 +15,7 @@
         }
 
         h2 {
+            text-align:center;
             color: DarkSlateGray;
             font-size: 24px;
             margin-bottom: 10px;
@@ -22,22 +23,26 @@
         }
 
         p {
+            text-align:center;
             color: DimGray;
             font-size: 18px;
             margin-bottom: 15px;
         }
 
         a {
+            text-align:center;
             color: DodgerBlue;
             text-decoration: none;
         }
 
         a:hover {
+            text-align:center;
             color: Tomato;
             text-decoration: underline;
         }
 
         p a {
+            text-align:center;
             font-weight: bold;
         }
 
@@ -49,12 +54,14 @@
         }
 
         h1 {
+            text-align:center;
             color: #2F4F4F;
             font-size: 36px;
             margin-bottom: 30px;
         }
 
         form {
+            text-align:center;
             padding: 20px;
             border-radius: 8px;
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
