--- a/login.html
+++ b/login.html
@@ -98,14 +98,8 @@
     <h1>Login</h1>
     <form method="post" action="submit_email.py">
         <label for="email">Enter your email address:</label><br>
-        <input 
-            type="email" 
-            id="email" 
-            name="email" 
-            pattern=".+@gmail\.com" 
-            required 
-            placeholder="example@gmail.com">
-        <small>Example: yourname@gmail.com</small><br><br>
+        <input type="email" id="email" name="email" pattern=".+@gmail\.com" required><br>
+            placeholder="example@gmail.com"
         <button type="submit">Submit</button>
         <p>Please check your Gmail inbox to start the simulation.</p>
     </form>
