--- a/Website templates/index.html
+++ b/Website templates/index.html
@@ -144,12 +144,12 @@
         <div class="content-grid">
             <div>
                 <h2>What is Phishing?</h2>
-                <p>Add 1 short sentence about phishing</p>
+                <p>Phishing is when hackers send you emails or other things that trick you into giving away personal information or money.</p>
                 <a href="whatIsPhishing.html" class="button">Learn More</a>
             </div>
             <div>
                 <h2>Why It Matters</h2>
-                <p>Add a brief</p>
+                <p>Learning about phishing is important as many people get phished every day, including you. Educating yourself about this topic can help you save your data and money.</p>
                 <a href="typesOfPhishing.html" class="button">Learn More</a>
             </div>
         </div>
