--- a/Website templates/whatIsPhishing.html
+++ b/Website templates/whatIsPhishing.html
@@ -79,44 +79,6 @@
             border-radius: 5px;
             margin-bottom: 20px;
         }
-
-        .content-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-            gap: 20px;
-        }
-
-        .content-grid div {
-            background: White;
-            padding: 20px;
-            border: 1px solid #ddd;
-            border-radius: 8px;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
-            text-align: left;
-            transition: all 0.25s ease;
-        }
-
-        .content-grid div:hover {
-            box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
-        }
-
-        .button {
-            display: inline-block;
-            padding: 10px 20px;
-            margin: 10px 0;
-            background-color: LightBlue;
-            color: Navy;
-            border: none;
-            border-radius: 5px;
-            font-weight: bold;
-            text-decoration: none;
-            transition: background 0.3s, color 0.3s;
-        }
-
-        .button:hover {
-            background-color: SteelBlue;
-            color: White;
-        }
     </style>
 </head>
 <body>
@@ -138,21 +100,9 @@
     </nav>
 
     <section>
+        <h1>What Is Phishing?</h1>
         <img src="C:\Users\Noopur Shrivastava\Downloads\Phishing.jpg" alt="Phishing">
-        <h1>About Sherlock Phish</h1>
-        <p>A sentence or two about Sherlock Phish that clearly explains the objective</p>
-        <div class="content-grid">
-            <div>
-                <h2>What is Phishing?</h2>
-                <p>Add 1 short sentence about phishing</p>
-                <a href="whatIsPhishing.html" class="button">Learn More</a>
-            </div>
-            <div>
-                <h2>Why It Matters</h2>
-                <p>Add a brief</p>
-                <a href="typesOfPhishing.html" class="button">Learn More</a>
-            </div>
-        </div>
+        <p>A detailed, simple paragraph about phishing</p>
     </section>
 
     <footer>
