minor color changes

--- a/Website templates/index.html
+++ b/Website templates/index.html
@@ -6,7 +6,7 @@
     <title>Sherlock Phish</title>
     <style>
         body {
-            background-color: LightSkyBlue;
+            background-color: LightBlue;
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             margin: 0;
             padding: 0;
