--- a/Website templates/whatIsPhishing.html
+++ b/Website templates/whatIsPhishing.html
@@ -6,7 +6,7 @@
     <title>Sherlock Phish</title>
     <style>
         body {
-            background-color: LightSkyBlue;
+            background-color: LightBlue;
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             margin: 0;
             padding: 0;
@@ -103,6 +103,7 @@
         <h1>What Is Phishing?</h1>
         <img src="C:\Users\Noopur Shrivastava\Downloads\Phishing.jpg" alt="Phishing">
         <p>A detailed, simple paragraph about phishing</p>
+        <a href="C:\Users\Noopur Shrivastava\Documents\GitHub\Codefest-2025\Website templates\index.html" style="color: Red; text-decoration: none; font-weight: bold;">Return to Home</a>
     </section>
 
     <footer>
