--- a/Website templates/whatIsPhishing.html
+++ b/Website templates/whatIsPhishing.html
@@ -102,7 +102,7 @@
     <section>
         <h1>What Is Phishing?</h1>
         <img src="C:\Users\Noopur Shrivastava\Downloads\Phishing.jpg" alt="Phishing">
-        <p>A detailed, simple paragraph about phishing</p>
+        <p>Phishing is another type of cyber attack. Phishing got its name from “phish” meaning fish. It is a common phenomenon to put bait for the fish to get trapped. Phishing works in a similar way. It is an unethical way to dupe the user or victim to click on harmful sites with malware. The attacker crafts the harmful site in such a way that the victim feels it to be an authentic site, thus falling prey to it.<br> The most common mode of phishing is by sending spam emails that appear to be authentic and thus, taking away credentials from the victim. The main motive of the attacker behind phishing is to gain confidential information like passwords or credit card details.</p>
         <a href="C:\Users\Noopur Shrivastava\Documents\GitHub\Codefest-2025\Website templates\index.html" style="color: Red; text-decoration: none; font-weight: bold;">Return to Home</a>
     </section>
 
