LOTS OF IMPROPRTANT CHANGES

--- a/Website templates/index.html
+++ b/Website templates/index.html
@@ -130,7 +130,7 @@
             <li><a href="whatIsPhishing.html">What Is Phishing?</a></li>
             <li><a href="typesOfPhishing.html">Types Of Phishing</a></li>
             <li><a href="login.html">Phishing Simulation</a></li>
-            <li><a href="whatToDoWhenYouSeePhishing.html">What To Do?</a></li>
+            <li><a href="whatToDo.html">What To Do?</a></li>
             <li><a href="howToPreventPhishing.html">How To Prevent Phishing?</a></li>
             <li><a href="FAQ.html">FAQs</a></li>
             <li><a href="quiz.html"></a>Quiz</li>
