--- a/Website templates/typesofphishing.html
+++ b/Website templates/typesofphishing.html
@@ -121,9 +121,9 @@
             <li><h2>Spear Phishing</h2></li>
                 <p>Spear Phishing specifically targets individuals or organizations, though unlike spear fishing, the person does not have to be high-end. This also has personal, targeted mail crafting.</p>
             <li><h2>Smishing (SMS Phishing)</h2></li>
-                <p>This type of phishing is done through text messages instead of emails.</p>
+                <p>This type of phishing is done through text messages instead of emails. The word is a merge of SMS and Phishing.</p>
             <li><h2>Vishing (Voice Phishing)</h2></li>
-                <p>Here, people fake voices to phish over the phone, on calls.</p>
+                <p>Here, people fake voices to phish over the phone, on calls. Perople will often pretend to be from a bank, technical support, or even from the government to create a sence of false urgency.</p>
         </ol>
         <a href="https://www.fortinet.com/resources/cyberglossary/types-of-phishing-attacks">Learn about other types of phishing here</a>
         <br>   
