--- a/Website templates/login.html
+++ b/Website templates/login.html
@@ -99,7 +99,7 @@
     <form method="post" action="submit_email.py">
         <label for="email">Enter your email address:</label><br>
         <input type="email" id="email" name="email" pattern=".+@gmail\.com" required><br>
-        <button type="submit">Submit</button>
+        <button type="submit">Submit</button> value="Submit"
         <p>Please check your Gmail inbox to start the simulation.</p>
     </form>
 </body>
