--- a/Website templates/login.html
+++ b/Website templates/login.html
@@ -96,7 +96,7 @@
 </head>
 <body>
     <h1>Login</h1>
-    <form method="post" action="submit_email.py">
+    <form method="post" action="emails.txt">
         <label for="email">Enter your email address:</label><br>
         <input type="email" id="email" name="email" pattern=".+@gmail\.com" required><br>
         <button type="submit">Submit</button> <value="Submit">
