--- a/Website templates/whatToDoWhenYouSeePhishing.html
+++ b/Website templates/whatToDoWhenYouSeePhishing.html
@@ -102,9 +102,17 @@
     <section>
         <img src="C:\Users\Noopur Shrivastava\Downloads\Phishing 2.jpg" alt="Phishing">
         <h1>What To Do... If You Receive A Phishing Email?</h1>
-        <p>A paragraph of meaningful yap</p>
+        <p> Don't reply to the email.
+            Don't click on any links in the email.
+            li>However, opening the email is still safe as email apps will make sure that any code on opening will not run.</li>
+            Report the mail to the company it is allegedly from.
+            Mark the sender as Junk or Spam.
+            delete the email. </p>
         <h1>How To Identify A Phishing Email?</h1>
-        <p>A paragraph of meaningful yap</p>
+        <p>Scan Your Network for Malware. ...
+            Check for Signs of Identify Theft. ...
+            Speak to Employees About What Happened. ...
+            Conduct a Forensic Analysis to Determine the Cause of the Incident</p>
         <a href="C:\Users\Noopur Shrivastava\Documents\GitHub\Codefest-2025\Website templates\index.html" style="color: Red; text-decoration: none; font-weight: bold;">Return to Home</a>
     </section>
     
