--- a/Website templates/howToPreventPhishing.html
+++ b/Website templates/howToPreventPhishing.html
@@ -102,7 +102,9 @@
     <section>
         <img src="C:\Users\Noopur Shrivastava\Downloads\Phishing 3.jpg" alt="Phishing">
         <h1>How To Prevent Phishing?</h1>
-        <p>A paragraph of meaningful yap</p>
+        <p>Scan Your Network for Malware. ...
+            Check for Signs of Identify Theft. ...
+            Conduct a Forensic Analysis to Determine the Cause of the Incident</p>
         <ol>
             <li>This is how you add list items to an ordered list</li>
             <li></li>
